RESOLVED FIXED230367
Don't throw an exception in the middle of linking a CodeBlock
https://bugs.webkit.org/show_bug.cgi?id=230367
Summary Don't throw an exception in the middle of linking a CodeBlock
Saam Barati
Reported 2021-09-16 12:34:07 PDT
...
Attachments
patch (12.31 KB, patch)
2021-09-16 13:27 PDT, Saam Barati
ysuzuki: review+
patch for landing (12.29 KB, patch)
2021-09-16 13:31 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2021-09-16 13:27:29 PDT
Yusuke Suzuki
Comment 2 2021-09-16 13:29:22 PDT
Comment on attachment 438392 [details] patch r=me
Saam Barati
Comment 3 2021-09-16 13:31:01 PDT
Created attachment 438394 [details] patch for landing
EWS
Comment 4 2021-09-16 18:05:12 PDT
Committed r282624 (241781@main): <https://commits.webkit.org/241781@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438394 [details].
Radar WebKit Bug Importer
Comment 5 2021-09-16 18:06:17 PDT
Note You need to log in before you can comment on or make changes to this bug.